# SurgicalEfficiencyBySirens

./: LICENSE  MAIN_README.md  Makefile  README.md  pyproject.toml  requirements.txt
READMES/: DATA_README.md  MODELS_README.md  PIPELINE_README.md  REPORTS_README.md
config/: config.yaml
docs/: UPGRADE.md  data_dictionary.md  methodology.md
src/stress_surgery/: __init__.py  cli.py
src/stress_surgery/analysis/: eda.py  sensitivity.py  stress_curves.py
src/stress_surgery/data/: cleaning.py  exposure.py  features.py  ingest.py  schema.py  validate.py
src/stress_surgery/models/: baseline_logit.py  cox_survival.py  did.py  gee_logit.py  weighting.py
src/stress_surgery/reporting/: build_report.py
src/stress_surgery/reporting/templates/: report.html.j2
src/stress_surgery/utils/: hashing.py  io.py  plotting.py  time.py
tests/: test_cli.py  test_features.py  test_models.py  test_schemas.py
